# Money-Manager

./: .gitignore  Cargo.toml  commands  tailwind.config.js
money_manager_common/: Cargo.toml
money_manager_common/src/: lib.rs  models.rs
money_manager_common/src/components/: buttons.rs  dashboard_page.rs  debt_list.rs  debt_page.rs  errors.rs  inputs.rs  loadings.rs  login_page.rs  mod.rs  register_page.rs
money_manager_desk/: Cargo.toml
money_manager_desk/src/: main.rs
money_manager_web/: Cargo.toml  Trunk.toml  index.html
money_manager_web/src/: main.rs
