[package]
name = "money_manager_common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.2.4" }
dioxus-free-icons = { version = "0.5.1", features = [
    "hero-icons-solid",
    "font-awesome-solid",
] }

serde = { version = "1.0.152", features = ["derive"] }
serde_json = "1.0.91"

log = "0.4.17"
