[package]
name = "money_manager_desk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
money_manager_common = { version = "0.1.0", path = "../money_manager_common" }
dioxus = { version = "0.2.4", features = ["desktop"] }

log = "0.4.17"
pretty_env_logger = "0.4.0"
